syntax = "proto3";

option go_package = "pkg/grpc";

package auto.trading.hello.v1;

import "google/protobuf/timestamp.proto";

service GreetingService {
    // unary
    rpc Hello (HelloRequest) returns (HelloResponse) {};
    // server streaming
    rpc HelloServerStream (HelloRequest) returns (stream HelloResponse) {};
    // client streaming
    rpc HelloClientStream (stream HelloRequest) returns (HelloResponse) {};
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
    google.protobuf.Timestamp create_time = 2;
}
